--- a/la_palette_du_gout.html
+++ b/la_palette_du_gout.html
@@ -38,147 +38,149 @@
                     <i class="fas fa-heart heart-fill"></i>
                 </div>
             </div>
-            <section class="menu__starters">
-                <h3 class="menu__title--categorie">ENTRÉES</h3>
-                <div class="box-list">
-                    <div class="box delay-1">
-                        <div class="box__container">
-                            <div class="box__content">
-                                <h3>Fricassée d'escargot</h3>
-                                <p>Au piment d'Espelette </p>
+            <div class="menu__container">
+                <section class="menu__starters">
+                    <h3 class="menu__title--categorie">ENTRÉES</h3>
+                    <div class="box-list">
+                        <div class="box delay-1">
+                            <div class="box__container">
+                                <div class="box__content">
+                                    <h3>Fricassée d'escargot</h3>
+                                    <p>Au piment d'Espelette </p>
+                                </div>
+                                <div class="price">
+                                    <p>25<span>€</span></p>
+                                </div>
                             </div>
-                            <div class="price">
-                                <p>25<span>€</span></p>
+                            <div class="check">
+                                <i class="fas fa-check"></i>
                             </div>
                         </div>
-                        <div class="check">
-                            <i class="fas fa-check"></i>
+                        <div class="box delay-2">
+                            <div class="box__container">
+                                <div class="box__content">
+                                    <h3>Foie gras de canard mi-cuit</h3>
+                                    <p>Et ses copeaux de truffe noire</p>
+                                </div>
+                                <div class="price">
+                                    <p>35<span>€</span></p>
+                                </div>
+                            </div>
+                            <div class="check">
+                                <i class="fas fa-check"></i>
+                            </div>
+                        </div>
+                        <div class="box delay-3">
+                            <div class="box__container">
+                                <div class="box__content">
+                                    <h3>Oeuf au plat</h3>
+                                    <p>Assaisonné à la truffe sur lit de caviar</p>
+                                </div>
+                                <div class="price">
+                                    <p>20<span>€</span></p>
+                                </div>
+                            </div>
+                            <div class="check">
+                                <i class="fas fa-check"></i>
+                            </div>
                         </div>
                     </div>
-                    <div class="box delay-2">
-                        <div class="box__container">
-                            <div class="box__content">
-                                <h3>Foie gras de canard mi-cuit</h3>
-                                <p>Et ses copeaux de truffe noire</p>
+                </section>
+                <section class="menu__dishes">
+                    <h2 class="menu__title--categorie">PLATS</h2>
+                    <div class="box-list">
+                        <div class="box delay-4">
+                            <div class="box__container">
+                                <div class="box__content">
+                                    <h3>Filet de boeuf aux herbes</h3>
+                                    <p>Accompagné de sa ribambelle de légumes</p>
+                                </div>
+                                <div class="price">
+                                    <p>40<span>€</span></p>
+                                </div>
                             </div>
-                            <div class="price">
-                                <p>35<span>€</span></p>
+                            <div class="check">
+                                <i class="fas fa-check"></i>
                             </div>
                         </div>
-                        <div class="check">
-                            <i class="fas fa-check"></i>
+                        <div class="box delay-5">
+                            <div class="box__container">
+                                <div class="box__content">
+                                    <h3>Parmentier de queue de boeuf</h3>
+                                    <p>À la truffe noire sur sa purée de panais</p>
+                                </div>
+                                <div class="price">
+                                    <p>35<span>€</span></p>
+                                </div>
+                            </div>
+                            <div class="check">
+                                <i class="fas fa-check"></i>
+                            </div>
+                        </div>
+                        <div class="box delay-6">
+                            <div class="box__container">
+                                <div class="box__content">
+                                    <h3>Filet de turbot</h3>
+                                    <p>Aux agrumes</p>
+                                </div>
+                                <div class="price">
+                                    <p>44<span>€</span></p>
+                                </div>
+                            </div>
+                            <div class="check">
+                                <i class="fas fa-check"></i>
+                            </div>
                         </div>
                     </div>
-                    <div class="box delay-3">
-                        <div class="box__container">
-                            <div class="box__content">
-                                <h3>Oeuf au plat</h3>
-                                <p>Assaisonné à la truffe sur lit de caviar</p>
+                </section>
+                <section class="menu__desserts">
+                    <h2 class="menu__title--categorie">DESSERTS</h2>
+                    <div class="box-list">
+                        <div class="box delay-7">
+                            <div class="box__container">
+                                <div class="box__content">
+                                    <h3>Paris-Brest</h3>
+                                    <p>Revisité</p>
+                                </div>
+                                <div class="price">
+                                    <p>18<span>€</span></p>
+                                </div>
                             </div>
-                            <div class="price">
-                                <p>20<span>€</span></p>
+                            <div class="check">
+                                <i class="fas fa-check"></i>
                             </div>
                         </div>
-                        <div class="check">
-                            <i class="fas fa-check"></i>
+                        <div class="box delay-8">
+                            <div class="box__container">
+                                <div class="box__content">
+                                    <h3>Macaron au chocolat d'exception </h3>
+                                    <p>Et glace à la vanille de Madagascar</p>
+                                </div>
+                                <div class="price">
+                                    <p>22<span>€</span></p>
+                                </div>
+                            </div>
+                            <div class="check">
+                                <i class="fas fa-check"></i>
+                            </div>
+                        </div>
+                        <div class="box delay-9">
+                            <div class="box__container">
+                                <div class="box__content">
+                                    <h3>Mousse au chocolat </h3>
+                                    <p>Au piment d'Espelette et à la truffe noire</p>
+                                </div>
+                                <div class="price">
+                                    <p>23<span>€</span></p>
+                                </div>
+                            </div>
+                            <div class="check">
+                                <i class="fas fa-check"></i>
+                            </div>
                         </div>
                     </div>
-                </div>
-            </section>
-            <section class="menu__dishes">
-                <h2 class="menu__title--categorie">PLATS</h2>
-                <div class="box-list">
-                    <div class="box delay-4">
-                        <div class="box__container">
-                            <div class="box__content">
-                                <h3>Filet de boeuf aux herbes</h3>
-                                <p>Accompagné de sa ribambelle de légumes</p>
-                            </div>
-                            <div class="price">
-                                <p>40<span>€</span></p>
-                            </div>
-                        </div>
-                        <div class="check">
-                            <i class="fas fa-check"></i>
-                        </div>
-                    </div>
-                    <div class="box delay-5">
-                        <div class="box__container">
-                            <div class="box__content">
-                                <h3>Parmentier de queue de boeuf</h3>
-                                <p>À la truffe noire sur sa purée de panais</p>
-                            </div>
-                            <div class="price">
-                                <p>35<span>€</span></p>
-                            </div>
-                        </div>
-                        <div class="check">
-                            <i class="fas fa-check"></i>
-                        </div>
-                    </div>
-                    <div class="box delay-6">
-                        <div class="box__container">
-                            <div class="box__content">
-                                <h3>Filet de turbot</h3>
-                                <p>Aux agrumes</p>
-                            </div>
-                            <div class="price">
-                                <p>44<span>€</span></p>
-                            </div>
-                        </div>
-                        <div class="check">
-                            <i class="fas fa-check"></i>
-                        </div>
-                    </div>
-                </div>
-            </section>
-            <section class="menu__desserts">
-                <h2 class="menu__title--categorie">DESSERTS</h2>
-                <div class="box-list">
-                    <div class="box delay-7">
-                        <div class="box__container">
-                            <div class="box__content">
-                                <h3>Paris-Brest</h3>
-                                <p>Revisité</p>
-                            </div>
-                            <div class="price">
-                                <p>18<span>€</span></p>
-                            </div>
-                        </div>
-                        <div class="check">
-                            <i class="fas fa-check"></i>
-                        </div>
-                    </div>
-                    <div class="box delay-8">
-                        <div class="box__container">
-                            <div class="box__content">
-                                <h3>Macaron au chocolat d'exception </h3>
-                                <p>Et glace à la vanille de Madagascar</p>
-                            </div>
-                            <div class="price">
-                                <p>22<span>€</span></p>
-                            </div>
-                        </div>
-                        <div class="check">
-                            <i class="fas fa-check"></i>
-                        </div>
-                    </div>
-                    <div class="box delay-9">
-                        <div class="box__container">
-                            <div class="box__content">
-                                <h3>Mousse au chocolat </h3>
-                                <p>Au piment d'Espelette et à la truffe noire</p>
-                            </div>
-                            <div class="price">
-                                <p>23<span>€</span></p>
-                            </div>
-                        </div>
-                        <div class="check">
-                            <i class="fas fa-check"></i>
-                        </div>
-                    </div>
-                </div>
-            </section>
+                </section>
+            </div>
             <div class="menu__btn">
                 <button class="btn"><a href="#">Commander</a></button>
             </div>
