--- a/a_la_française.html
+++ b/a_la_française.html
@@ -38,147 +38,149 @@
                     <i class="fas fa-heart heart-fill"></i>
                 </div>
             </div>
-            <section class="menu__starters">
-                <h3 class="menu__title--categorie">ENTRÉES</h3>
-                <div class="box-list">
-                    <div class="box delay-1">
-                        <div class="box__container">
-                            <div class="box__content">
-                                <h3>Tartare de poulpe acidulé</h3>
-                                <p>Aux zests d'orange</p>
+            <div class="menu__container">
+                <section class="menu__starters">
+                    <h3 class="menu__title--categorie">ENTRÉES</h3>
+                    <div class="box-list">
+                        <div class="box delay-1">
+                            <div class="box__container">
+                                <div class="box__content">
+                                    <h3>Tartare de poulpe acidulé</h3>
+                                    <p>Aux zests d'orange</p>
+                                </div>
+                                <div class="price">
+                                    <p>25<span>€</span></p>
+                                </div>
                             </div>
-                            <div class="price">
-                                <p>25<span>€</span></p>
+                            <div class="check">
+                                <i class="fas fa-check"></i>
                             </div>
                         </div>
-                        <div class="check">
-                            <i class="fas fa-check"></i>
+                        <div class="box delay-2">
+                            <div class="box__container">
+                                <div class="box__content">
+                                    <h3>Velouté de légumes d'antan</h3>
+                                    <p>Carotte, panais, topinambour</p>
+                                </div>
+                                <div class="price">
+                                    <p>35<span>€</span></p>
+                                </div>
+                            </div>
+                            <div class="check">
+                                <i class="fas fa-check"></i>
+                            </div>
+                        </div>
+                        <div class="box delay-3">
+                            <div class="box__container">
+                                <div class="box__content">
+                                    <h3>Soupe à l'oignon</h3>
+                                    <p>Revisitée</p>
+                                </div>
+                                <div class="price">
+                                    <p>20<span>€</span></p>
+                                </div>
+                            </div>
+                            <div class="check">
+                                <i class="fas fa-check"></i>
+                            </div>
                         </div>
                     </div>
-                    <div class="box delay-2">
-                        <div class="box__container">
-                            <div class="box__content">
-                                <h3>Velouté de légumes d'antan</h3>
-                                <p>Carotte, panais, topinambour</p>
+                </section>
+                <section class="menu__dishes">
+                    <h2 class="menu__title--categorie">PLATS</h2>
+                    <div class="box-list">
+                        <div class="box delay-4">
+                            <div class="box__container">
+                                <div class="box__content">
+                                    <h3>Coquilles Saint-Jacques</h3>
+                                    <p>Accompagnées d'une purée de panais</p>
+                                </div>
+                                <div class="price">
+                                    <p>40<span>€</span></p>
+                                </div>
                             </div>
-                            <div class="price">
-                                <p>35<span>€</span></p>
+                            <div class="check">
+                                <i class="fas fa-check"></i>
                             </div>
                         </div>
-                        <div class="check">
-                            <i class="fas fa-check"></i>
+                        <div class="box delay-5">
+                            <div class="box__container">
+                                <div class="box__content">
+                                    <h3>Magret de canard</h3>
+                                    <p>Et parmentier de pommes de terre</p>
+                                </div>
+                                <div class="price">
+                                    <p>35<span>€</span></p>
+                                </div>
+                            </div>
+                            <div class="check">
+                                <i class="fas fa-check"></i>
+                            </div>
+                        </div>
+                        <div class="box delay-6">
+                            <div class="box__container">
+                                <div class="box__content">
+                                    <h3>Pigeonneau d’Ille-et-Vilaine</h3>
+                                    <p>Sur son lit de gnocchis aux légumes</p>
+                                </div>
+                                <div class="price">
+                                    <p>44<span>€</span></p>
+                                </div>
+                            </div>
+                            <div class="check">
+                                <i class="fas fa-check"></i>
+                            </div>
                         </div>
                     </div>
-                    <div class="box delay-3">
-                        <div class="box__container">
-                            <div class="box__content">
-                                <h3>Soupe à l'oignon</h3>
-                                <p>Revisitée</p>
+                </section>
+                <section class="menu__desserts">
+                    <h2 class="menu__title--categorie">DESSERTS</h2>
+                    <div class="box-list">
+                        <div class="box delay-7">
+                            <div class="box__container">
+                                <div class="box__content">
+                                    <h3>Pétales de violettes glacés</h3>
+                                    <p>Et purée de noisettes</p>
+                                </div>
+                                <div class="price">
+                                    <p>18<span>€</span></p>
+                                </div>
                             </div>
-                            <div class="price">
-                                <p>20<span>€</span></p>
+                            <div class="check">
+                                <i class="fas fa-check"></i>
                             </div>
                         </div>
-                        <div class="check">
-                            <i class="fas fa-check"></i>
+                        <div class="box delay-8">
+                            <div class="box__container">
+                                <div class="box__content">
+                                    <h3>Fondant au chocolat</h3>
+                                    <p>Revisité</p>
+                                </div>
+                                <div class="price">
+                                    <p>22<span>€</span></p>
+                                </div>
+                            </div>
+                            <div class="check">
+                                <i class="fas fa-check"></i>
+                            </div>
+                        </div>
+                        <div class="box delay-9">
+                            <div class="box__container">
+                                <div class="box__content">
+                                    <h3>Millefeuille croustillant</h3>
+                                    <p>Myrtilles et pâte d’amande</p>
+                                </div>
+                                <div class="price">
+                                    <p>23<span>€</span></p>
+                                </div>
+                            </div>
+                            <div class="check">
+                                <i class="fas fa-check"></i>
+                            </div>
                         </div>
                     </div>
-                </div>
-            </section>
-            <section class="menu__dishes">
-                <h2 class="menu__title--categorie">PLATS</h2>
-                <div class="box-list">
-                    <div class="box delay-4">
-                        <div class="box__container">
-                            <div class="box__content">
-                                <h3>Coquilles Saint-Jacques</h3>
-                                <p>Accompagnées d'une purée de panais</p>
-                            </div>
-                            <div class="price">
-                                <p>40<span>€</span></p>
-                            </div>
-                        </div>
-                        <div class="check">
-                            <i class="fas fa-check"></i>
-                        </div>
-                    </div>
-                    <div class="box delay-5">
-                        <div class="box__container">
-                            <div class="box__content">
-                                <h3>Magret de canard</h3>
-                                <p>Et parmentier de pommes de terre</p>
-                            </div>
-                            <div class="price">
-                                <p>35<span>€</span></p>
-                            </div>
-                        </div>
-                        <div class="check">
-                            <i class="fas fa-check"></i>
-                        </div>
-                    </div>
-                    <div class="box delay-6">
-                        <div class="box__container">
-                            <div class="box__content">
-                                <h3>Pigeonneau d’Ille-et-Vilaine</h3>
-                                <p>Sur son lit de gnocchis aux légumes</p>
-                            </div>
-                            <div class="price">
-                                <p>44<span>€</span></p>
-                            </div>
-                        </div>
-                        <div class="check">
-                            <i class="fas fa-check"></i>
-                        </div>
-                    </div>
-                </div>
-            </section>
-            <section class="menu__desserts">
-                <h2 class="menu__title--categorie">DESSERTS</h2>
-                <div class="box-list">
-                    <div class="box delay-7">
-                        <div class="box__container">
-                            <div class="box__content">
-                                <h3>Pétales de violettes glacés</h3>
-                                <p>Et purée de noisettes</p>
-                            </div>
-                            <div class="price">
-                                <p>18<span>€</span></p>
-                            </div>
-                        </div>
-                        <div class="check">
-                            <i class="fas fa-check"></i>
-                        </div>
-                    </div>
-                    <div class="box delay-8">
-                        <div class="box__container">
-                            <div class="box__content">
-                                <h3>Fondant au chocolat</h3>
-                                <p>Revisité</p>
-                            </div>
-                            <div class="price">
-                                <p>22<span>€</span></p>
-                            </div>
-                        </div>
-                        <div class="check">
-                            <i class="fas fa-check"></i>
-                        </div>
-                    </div>
-                    <div class="box delay-9">
-                        <div class="box__container">
-                            <div class="box__content">
-                                <h3>Millefeuille croustillant</h3>
-                                <p>Myrtilles et pâte d’amande</p>
-                            </div>
-                            <div class="price">
-                                <p>23<span>€</span></p>
-                            </div>
-                        </div>
-                        <div class="check">
-                            <i class="fas fa-check"></i>
-                        </div>
-                    </div>
-                </div>
-            </section>
+                </section>
+            </div>
             <div class="menu__btn">
                 <button class="btn order"><a href="#">Commander</a></button>
             </div>
