--- a/le_delice_du_sens.html
+++ b/le_delice_du_sens.html
@@ -39,147 +39,149 @@
                     <i class="fas fa-heart heart-fill"></i>
                 </div>
             </div>
-            <section class="menu__starters">
-                <h3 class="menu__title--categorie">ENTRÉES</h3>
-                <div class="box-list">
-                    <div class="box delay-1">
-                        <div class="box__container">
-                            <div class="box__content">
-                                <h3>Tartare de thon</h3>
-                                <p>Assaisonné au yuzu</p>
+            <div class="menu__container">
+                <section class="menu__starters">
+                    <h3 class="menu__title--categorie">ENTRÉES</h3>
+                    <div class="box-list">
+                        <div class="box delay-1">
+                            <div class="box__container">
+                                <div class="box__content">
+                                    <h3>Tartare de thon</h3>
+                                    <p>Assaisonné au yuzu</p>
+                                </div>
+                                <div class="price">
+                                    <p>25<span>€</span></p>
+                                </div>
                             </div>
-                            <div class="price">
-                                <p>25<span>€</span></p>
+                            <div class="check">
+                                <i class="fas fa-check"></i>
                             </div>
                         </div>
-                        <div class="check">
-                            <i class="fas fa-check"></i>
+                        <div class="box delay-2">
+                            <div class="box__container">
+                                <div class="box__content">
+                                    <h3>Bouchée de homard croustillant </h3>
+                                    <p>Et sa farandole de petits légumes</p>
+                                </div>
+                                <div class="price">
+                                    <p>35<span>€</span></p>
+                                </div>
+                            </div>
+                            <div class="check">
+                                <i class="fas fa-check"></i>
+                            </div>
+                        </div>
+                        <div class="box delay-3">
+                            <div class="box__container">
+                                <div class="box__content">
+                                    <h3>Velouté de cèpes </h3>
+                                    <p>Aux truffes</p>
+                                </div>
+                                <div class="price">
+                                    <p>20<span>€</span></p>
+                                </div>
+                            </div>
+                            <div class="check">
+                                <i class="fas fa-check"></i>
+                            </div>
                         </div>
                     </div>
-                    <div class="box delay-2">
-                        <div class="box__container">
-                            <div class="box__content">
-                                <h3>Bouchée de homard croustillant </h3>
-                                <p>Et sa farandole de petits légumes</p>
+                </section>
+                <section class="menu__dishes">
+                    <h2 class="menu__title--categorie">PLATS</h2>
+                    <div class="box-list">
+                        <div class="box delay-4">
+                            <div class="box__container">
+                                <div class="box__content">
+                                    <h3>Poulet rôti aux herbes de Provence </h3>
+                                    <p>Et sa crème de truffe</p>
+                                </div>
+                                <div class="price">
+                                    <p>40<span>€</span></p>
+                                </div>
                             </div>
-                            <div class="price">
-                                <p>35<span>€</span></p>
+                            <div class="check">
+                                <i class="fas fa-check"></i>
                             </div>
                         </div>
-                        <div class="check">
-                            <i class="fas fa-check"></i>
+                        <div class="box delay-5">
+                            <div class="box__container">
+                                <div class="box__content">
+                                    <h3>Langouste rôtie </h3>
+                                    <p>Et ses légumes de saison</p>
+                                </div>
+                                <div class="price">
+                                    <p>35<span>€</span></p>
+                                </div>
+                            </div>
+                            <div class="check">
+                                <i class="fas fa-check"></i>
+                            </div>
+                        </div>
+                        <div class="box delay-6">
+                            <div class="box__container">
+                                <div class="box__content">
+                                    <h3>Côte de boeuf Angus </h3>
+                                    <p>Et sa purée de panais</p>
+                                </div>
+                                <div class="price">
+                                    <p>44<span>€</span></p>
+                                </div>
+                            </div>
+                            <div class="check">
+                                <i class="fas fa-check"></i>
+                            </div>
                         </div>
                     </div>
-                    <div class="box delay-3">
-                        <div class="box__container">
-                            <div class="box__content">
-                                <h3>Velouté de cèpes </h3>
-                                <p>Aux truffes</p>
+                </section>
+                <section class="menu__desserts">
+                    <h2 class="menu__title--categorie">DESSERTS</h2>
+                    <div class="box-list">
+                        <div class="box delay-7">
+                            <div class="box__container">
+                                <div class="box__content">
+                                    <h3>Farandole de desserts</h3>
+                                    <p>Du chef</p>
+                                </div>
+                                <div class="price">
+                                    <p>18<span>€</span></p>
+                                </div>
                             </div>
-                            <div class="price">
-                                <p>20<span>€</span></p>
+                            <div class="check">
+                                <i class="fas fa-check"></i>
                             </div>
                         </div>
-                        <div class="check">
-                            <i class="fas fa-check"></i>
+                        <div class="box delay-8">
+                            <div class="box__container">
+                                <div class="box__content">
+                                    <h3>Crème brulée</h3>
+                                    <p>Revisitée</p>
+                                </div>
+                                <div class="price">
+                                    <p>22<span>€</span></p>
+                                </div>
+                            </div>
+                            <div class="check">
+                                <i class="fas fa-check"></i>
+                            </div>
+                        </div>
+                        <div class="box delay-9">
+                            <div class="box__container">
+                                <div class="box__content">
+                                    <h3>Tiramisu </h3>
+                                    <p>À la noisette</p>
+                                </div>
+                                <div class="price">
+                                    <p>23<span>€</span></p>
+                                </div>
+                            </div>
+                            <div class="check">
+                                <i class="fas fa-check"></i>
+                            </div>
                         </div>
                     </div>
-                </div>
-            </section>
-            <section class="menu__dishes">
-                <h2 class="menu__title--categorie">PLATS</h2>
-                <div class="box-list">
-                    <div class="box delay-4">
-                        <div class="box__container">
-                            <div class="box__content">
-                                <h3>Poulet rôti aux herbes de Provence </h3>
-                                <p>Et sa crème de truffe</p>
-                            </div>
-                            <div class="price">
-                                <p>40<span>€</span></p>
-                            </div>
-                        </div>
-                        <div class="check">
-                            <i class="fas fa-check"></i>
-                        </div>
-                    </div>
-                    <div class="box delay-5">
-                        <div class="box__container">
-                            <div class="box__content">
-                                <h3>Langouste rôtie </h3>
-                                <p>Et ses légumes de saison</p>
-                            </div>
-                            <div class="price">
-                                <p>35<span>€</span></p>
-                            </div>
-                        </div>
-                        <div class="check">
-                            <i class="fas fa-check"></i>
-                        </div>
-                    </div>
-                    <div class="box delay-6">
-                        <div class="box__container">
-                            <div class="box__content">
-                                <h3>Côte de boeuf Angus </h3>
-                                <p>Et sa purée de panais</p>
-                            </div>
-                            <div class="price">
-                                <p>44<span>€</span></p>
-                            </div>
-                        </div>
-                        <div class="check">
-                            <i class="fas fa-check"></i>
-                        </div>
-                    </div>
-                </div>
-            </section>
-            <section class="menu__desserts">
-                <h2 class="menu__title--categorie">DESSERTS</h2>
-                <div class="box-list">
-                    <div class="box delay-7">
-                        <div class="box__container">
-                            <div class="box__content">
-                                <h3>Farandole de desserts</h3>
-                                <p>Du chef</p>
-                            </div>
-                            <div class="price">
-                                <p>18<span>€</span></p>
-                            </div>
-                        </div>
-                        <div class="check">
-                            <i class="fas fa-check"></i>
-                        </div>
-                    </div>
-                    <div class="box delay-8">
-                        <div class="box__container">
-                            <div class="box__content">
-                                <h3>Crème brulée</h3>
-                                <p>Revisitée</p>
-                            </div>
-                            <div class="price">
-                                <p>22<span>€</span></p>
-                            </div>
-                        </div>
-                        <div class="check">
-                            <i class="fas fa-check"></i>
-                        </div>
-                    </div>
-                    <div class="box delay-9">
-                        <div class="box__container">
-                            <div class="box__content">
-                                <h3>Tiramisu </h3>
-                                <p>À la noisette</p>
-                            </div>
-                            <div class="price">
-                                <p>23<span>€</span></p>
-                            </div>
-                        </div>
-                        <div class="check">
-                            <i class="fas fa-check"></i>
-                        </div>
-                    </div>
-                </div>
-            </section>
+                </section>
+            </div>
             <div class="menu__btn">
                 <button class="btn"><a href="#">Commander</a></button>
             </div>
