--- a/pages/la_note_enchantee.html
+++ b/pages/la_note_enchantee.html
@@ -23,7 +23,7 @@
             <i class="fas fa-arrow-left"></i>
         </a>
         <div class="logo">
-            <a href="index.html"><img src="../images/logo/ohmyfood.png" alt="logo"></a>
+            <a href="../index.html"><img src="../images/logo/ohmyfood.png" alt="logo"></a>
         </div>
     </header>
     <main>
