--- a/pages/a_la_française.html
+++ b/pages/a_la_française.html
@@ -18,6 +18,7 @@
 </head>
 
 <body>
+    <!-- header -->
     <header>
         <a class="arrow" href="../index.html">
             <i class="fas fa-arrow-left"></i>
