--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <span></span>
             <span></span>
             <span></span>
-            <h2>Loading...</h2>
+            <p>Loading...</p>
         </div>
     </div>
     <main>
